tests/programs/symex/a5-test-cases/pass/symex_nested_condition_pass.rice
// symex

fn sign(x: int) -> int {
  if x >= 0 {
    1
  } else {
    -1
  }
}

#[symex]
fn example(x: int) {
  assert(sign(x) * x >= 0)
}