tests/programs/symex/a5-test-cases/fail/symex_simple_tuple_fail.rice
// symex
#[symex]
fn example(a: (int, int), b: (bool, float)) {
  if b.0 && b.1 > 0. {
    assert(a.0 == 0 || a.1 == 3)
  }
}